:icons: font

= Gentics Mesh Changelog

[[v0.14.0]]
== 0.14.0 (Not yet released)

CAUTION: The ElasticSearch server will no longer be embedded. Instead an external ElasticSearch 6.0 server can be used.

icon:plus[] Core: The OrientDB graph database will be updated to version 3.0

[[v0.13.1]]

icon:check[] Core: patched Vert.x bug which caused HTTP requests to fail which had the "Connection: close" header set

[[v0.13.0]]
== 0.13.0 (02.01.2018)

CAUTION: The Java REST client was updated to use RxJava 2.

icon:plus[] Core: The internal RxJava code has been migrated to version 2.

[[v0.12.0]]
== 0.12.0 (21.12.2017)

CAUTION: The `search.httpEnabled` option within the `mesh.yml` has been removed. The embedded elasticsearch API can no longer be directly accessed via HTTP. The existing endpoint `/api/v1/:projectName/search` is unaffected by this change.

icon:plus[] Core: The core Vert.x library was updated to version 3.5.0

icon:plus[] Core: The internal server routing system has been overhauled.

== 0.11.8 (18.12.2017)

icon:check[] Image: Fixed a bug which left file handles open and thus clogged the system. This could lead a lockup of the system in some cases.

== 0.11.7 (17.12.2017)

icon:check[] UI: Fixed an issue where the name in the explorer content list in always shown in english. link:https://github.com/gentics/mesh/issues/23[#23]

icon:check[] Storage: Binary field deletion has been made more resilient and will no longer fail if the referenced binary data is not stored within used binary storage. link:https://github.com/gentics/mesh/issues/235[#235]

icon:plus[] REST: The `hostname` and `ssl` properties have been added to the project create request. This information will be directly added to the initial release of the project. The properties can thus be changed by updating the project.

icon:plus[] REST: The link resolver mechanism was enhanced to also consider the `hostname` and `ssl` flag of the release of the node which is linked. 