@@ -1,4 +1,5 @@
 error=Error
+error_not_found=Not Found
 error_internal=Internal error occurred.
 error_not_authorized=You are not authorized to access the requested resource.
 error_admin_permission_required=Administration permissions are required.
